--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
     <section class="card">
         <div class="card__column1">
             <picture class="card__picture">
-                <source class="card__image" media="(min-width:1024px)" srcset="/frontend-mentor/perfume/img/image-product-desktop.jpg">
-                <source class="card__image" media="(min-width:375px)" srcset="/frontend-mentor/perfume/img/image-product-mobile.jpg">
-                <img  class="card__image" src="/frontend-mentor/perfume/img/image-product-mobile.jpg" alt="" width="100%">
+                <source class="card__image" media="(min-width:1024px)" srcset="https://luishjimenez.com/frontend-mentor/perfume/img/image-product-desktop.jpg" alt="perfume image desktop">
+                <source class="card__image" media="(min-width:375px)" srcset="https://luishjimenez.com/frontend-mentor/perfume/img/image-product-mobile.jpg" alt="Perfume image mobile">
+                <img  class="card__image" src="https://luishjimenez.com/frontend-mentor/perfume/img/image-product-mobile.jpg" alt="Perfume image - Mobile" width="100%">
             </picture>
         </div>
         <div class="card__column2">
